@@ -1,1 +1,2 @@
 Rolf Veen <rolf.veen att gmail dott com>
+Tim Lukins <tim.lukins att gmail dott com> converted this to CMake
