@@ -23,7 +23,13 @@ Installation
 [The file xml2ogdl.c needs the expat include file and library installed,
 usually found in the expat-devel package.] 
 
-To build and install:
+To configure build:
+
+  mkdir build
+  cd build
+  cmake .. [use -DCMAKE_INSTALL_PREFIX=/usr/local or similar to change location.]
+
+Then build:
 
   make
   make install
@@ -31,8 +37,4 @@ To build and install:
 To build the OGDL API documentation (needs doxygen):
 
   make doc
-
-To uninstall:
-
-  make uninstall
 
